# timesheet

./: .gitignore  2024-07.tsh  Cargo.toml  ftdetect.vim  renovate.json  setup.zsh  syntax.vim
.github/: renovate.json
.github/workflows/: build.yml
src/: main.rs
src/term/: add.rs  app.rs  command.rs  data.rs  editor.rs  mod.rs  model.rs  month.rs  select.rs  style.rs
src/term/components/: add.rs  alert.rs  command.rs  mod.rs  month.rs  months.rs  select.rs  summary.rs
term/: Cargo.toml
term/src/: command.rs  data.rs  main.rs  model.rs  month.rs  style.rs
times/: Cargo.toml
times/src/: convert.rs  format.rs  generate.rs  lib.rs  parse.rs  report.rs  verify.rs
