workspace = { members = ["times"] }

[package]
name = "timesheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
times = { path = "times" }

clap = { version = "4.5", features = ["derive"] }
fs-err = "2.11"
thiserror = "1.0.59"
chrono = "0.4.38"
