workspace = { members = ["times"] }

[package]
name = "timesheet"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
times = { path = "times" }

clap = { version = "4.5", features = ["derive"] }
fs-err = "3.0"
thiserror = "2.0.0"
chrono = "0.4.38"

ratatui = { version = "0.30.0-alpha.4" }
tui-input = "0.12.1"
editor-command = "2.0.0"
